--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  math_expressions: ^2.1.1
 
 dev_dependencies:
   flutter_test:
